tests/ui/not_on_module.rs
#[nanopass::langs]
pub fn lol() {}

fn main() {}
